--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "module": "esnext",
     "moduleResolution": "node",
     "jsx": "react",
-    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "lib": ["es2015", "dom"]
   },
   "include": ["src"]
